<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.mani.idonethis.ui.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen40"
            android:layout_marginTop="@dimen/dimen44"
            android:layout_marginEnd="@dimen/dimen40"
            android:text="Login"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/fontSize24"
            android:layout_centerHorizontal="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pagetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen40"
            android:layout_marginEnd="@dimen/dimen40"
            android:gravity="center"
            android:text="Standup Over Mail"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/fontSize16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appTitle" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen24"
            android:layout_marginTop="@dimen/dimen24"
            android:layout_marginEnd="@dimen/dimen24"
            app:bindUserNameErrorText="@{viewmodel.isValidUserName}"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/onError"
            app:hintTextAppearance="@style/label"
            android:layout_centerInParent="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.userName}"
                android:textAppearance="@style/primaryText" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_below="@+id/textInputLayoutUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen24"
            android:layout_marginTop="@dimen/dimen22"
            android:layout_marginEnd="@dimen/dimen24"
            app:bindPasswordErrorText="@{viewmodel.isValidPassword}"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/onError"
            app:hintTextAppearance="@style/label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="text"
                android:maxLength="10"
                android:text="@={viewmodel.password}"
                android:textAppearance="@style/primaryText" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_below="@+id/textInputLayoutPassword"
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/dimen24"
            android:layout_marginEnd="@dimen/dimen24"
            android:gravity="center"
            android:onClick="@{() -> viewmodel.login()}"
            android:textAppearance="@style/primaryText"
            android:textColor="@color/primaryTextColor"
            app:bindLoginButtonStatus="@{viewmodel.loginButtonStatus}"
            app:cornerRadius="@dimen/dimen12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>


    </RelativeLayout>
</layout>